objects/Customer_Journey__c.object
<CustomObject>
    <fields>
        <fullName>Acceptance_Criteria__c</fullName>
        <label>Acceptance Criteria</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Actor__c</fullName>
        <label>Actor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Design_Effort_Total_d__c</fullName>
        <label>Actual Design Effort Total (d)</label>
        <summarizedField>Customer_Journey_Task__c.Effort_d__c</summarizedField>
        <summaryForeignKey>Customer_Journey_Task__c.Customer_Journey__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Actual_Impl_Effort__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actual Implementation Effort Total (d)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Architecture_Analytics__c</fullName>
        <label>Architecture - Analytics</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Architecture_Data__c</fullName>
        <label>Architecture - Data</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Architecture_Integration__c</fullName>
        <label>Architecture - Integration</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Architecture_Logic__c</fullName>
        <label>Architecture - Logic</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Architecture_Other__c</fullName>
        <label>Architecture - Other</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Architecture_UI__c</fullName>
        <label>Architecture - UI</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Close_Reasons__c</fullName>
        <label>Close Reasons</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Close_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cloud__c</fullName>
        <label>Cloud</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Cloud</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Journey_Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Journey Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Journeys1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Journey_Details__c</fullName>
        <label>Customer Journey Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Deployed_to_Production__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deployed to Production</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Implementation_Progress__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Implementation Progress</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Implementation_Size__c</fullName>
        <label>Implementation Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Implementation_Size</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Journey_End__c</fullName>
        <label>Journey End</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Journey_Start__c</fullName>
        <label>Journey Start</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>Customer_Journey__c</referenceTo>
        <relationshipLabel>Child</relationshipLabel>
        <relationshipName>Customer_Journeys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Planned_Impl_Effort__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Planned Implementation Effort Total (d)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>copado__Project__c</referenceTo>
        <relationshipLabel>Customer Journeys</relationshipLabel>
        <relationshipName>Customer_Journeys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Roadmap Prioritization</fullName>
                    <default>true</default>
                    <label>In Roadmap Prioritization</label>
                </value>
                <value>
                    <fullName>In Design</fullName>
                </value>
                <value>
                    <fullName>Architecture Authorization</fullName>
                </value>
                <value>
                    <fullName>User Story Creation</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
                <value>
                    <fullName>User Acceptance Test</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategic_Theme__c</fullName>
        <label>Strategic Theme</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Strategic_Theme</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UAT_Approved_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UAT Approved by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Journeys</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Customer Journey</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Strategic_Theme__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Customer Journeys</label>
    </listViews>
    <listViews>
        <fullName>All_Design_Users_Customer_Journey</fullName>
        <filterScope>Queue</filterScope>
        <label>All Design Users</label>
        <queue>All_Design_Users</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Implementation_Users_Customer_Journey</fullName>
        <filterScope>Queue</filterScope>
        <label>All Implementation Users</label>
        <queue>All_Implementation_Users</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Approval_Customer_Journey</fullName>
        <filterScope>Queue</filterScope>
        <label>Approval</label>
        <queue>Approval</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Architects_Customer_Journey</fullName>
        <filterScope>Queue</filterScope>
        <label>Architects</label>
        <queue>Architects</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Business_Analysts_Customer_Journey</fullName>
        <filterScope>Queue</filterScope>
        <label>Business Analysts</label>
        <queue>Business_Analysts</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Developers_Customer_Journey</fullName>
        <filterScope>Queue</filterScope>
        <label>Developers</label>
        <queue>Developers</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Project_Leads_Customer_Journey</fullName>
        <filterScope>Queue</filterScope>
        <label>Project Leads</label>
        <queue>Project_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Testers_Customer_Journey</fullName>
        <filterScope>Queue</filterScope>
        <label>Testers</label>
        <queue>Testers</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>User_Acceptance_Tests_Customer_Journey</fullName>
        <filterScope>Queue</filterScope>
        <label>User Acceptance Tests</label>
        <queue>User_Acceptance_Tests</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Customer Journey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Journeys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>DeployToPRD</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISPICKVAL(Status__c , &apos;UAT&apos;)) &amp;&amp; NOT(ISPICKVAL(Status__c , &apos;Completed&apos;)) &amp;&amp;  Deployed_to_Production__c  = TRUE</errorConditionFormula>
        <errorMessage>You can deploy to PRD only after UAT</errorMessage>
    </validationRules>
</CustomObject>